# canary

./: Cargo.toml  README.md  build.rs  test.cy
backpat/: Cargo.toml
backpat/src/: compile.rs  lib.rs  opcode.rs  parse.rs
src/: build.rs  eval.rs  ident.rs  lib.rs  main.rs  opcode.rs  pattern.rs  token.rs  value.rs
src/ast/: grammar.lalrpop  mod.rs
src/pattern/: compile.rs  mod.rs  parse.rs
tests/: arrays.cy  functions.cy  harness.rs  patterns.cy  records.cy  scopes.cy  strings.cy  truthiness.cy  variables.cy  while_loops.cy
