[package]
name = "canary"
version = "0.1.0"

[build-dependencies]
lalrpop = { git = "https://github.com/nikomatsakis/lalrpop.git" }

[dependencies]
failure = "0.1.0"
failure_derive = "0.1.0"
lalrpop-util = { git = "https://github.com/nikomatsakis/lalrpop.git" }

[dependencies.backpat]
path = "backpat"

[workspace]
